fix: complete installation icon alignment

--- a/src/fsolauncher_ui/fsolauncher.css
+++ b/src/fsolauncher_ui/fsolauncher.css
@@ -176,7 +176,7 @@ block {
 
 .material-icons.left {
   float: left;
-  margin-right: 8px;
+  margin-right: 5px;
   margin-top: -5px;
 }
 
